# POO

./: Client.cpp  Client.hpp  Computer.cpp  Computer.hpp  Diagnosis.cpp  Diagnosis.hpp  Employee.cpp  Employee.hpp  README.md
sistema-informatica/: CMakeLists.txt  README.md
sistema-informatica/src/: client.cpp  computer.cpp  diagnosis.cpp  diagnosis.hpp  employee.cpp  employee.hpp  main.cpp
